# baxter_motion_simulator

./: CMakeLists.txt  package.xml  setup.py
misc/: postprocess_sim_pokes.sh  update_metadata_events.sh
models/baxter/: baxter.xml  baxter_intersection.txt  baxter_notorso.xml  baxter_rightarm_wstick_intersection.txt  baxter_rightarm_wstick_rosmesh.xml  baxter_rosmesh.xml  baxter_rosmesh_closedgripper.xml
models/baxter/mesh/: 00017835.stl  00030518.stl  E0.stl  E1.stl  H0.stl  H1.stl  S0.stl  S1.stl  W0.stl  W1.stl  W1C.stl  W2.stl  base_link.stl  electricgripper.stl  pedestal.stl
models/objects/: cheezeit.stl  cheezeit.xml  mustard.stl  mustard.xml  pringles.stl  pringles.xml
models/objects/misc/: cheezeit_1.stl  cheezeit_2.stl  mustard.stl
scripts/: arm_motion_generator.py  generate_csvs_from_bag.py  joint_state_recorder.py  simple_arm_velocity_wobbler.py
scripts/baxter_motion_simulator/: __init__.py  jointstaterecorder.py
src/: tracker.cpp
src/flow/: postprocess_baxter_motions.cpp  postprocess_baxter_motions_backup.cpp  postprocess_baxter_nat_motions.cpp  postprocess_poke_motions.cpp  postprocess_simulated_poke_motions.cpp  test_flow_computation.cpp
src/flow/misc/: check_camera_viewpoints.cpp  test_deltatfm.cpp  test_pangolin_multithread.cpp  update_metadata_events.cpp
